[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/ship1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DroneShip.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = -4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 75.0

[node name="Drone" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
rotation = 1.5708
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 42

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 3 )
[connection signal="area_exited" from="AttackRadius" to="." method="_on_AttackRadius_area_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
